# kdeadmin

./: Makefile  README.md  kdeadmin-4.3.4-bz#692737.patch  kdeadmin-4.3.4-ksystemlog-icon-bz#587904.patch  kdeadmin.spec  ksystemlog-icons.tar.bz2
src/: CMakeLists.txt  README
src/doc/: CMakeLists.txt
src/doc/kcontrol/: CMakeLists.txt
src/doc/kcontrol/knetworkconf/: CMakeLists.txt  index.cache.bz2  index.docbook
src/doc/kcron/: index.cache.bz2
src/doc/kdat/: index.cache.bz2  index.docbook
src/doc/kpackage/: index.cache.bz2  index.docbook
src/doc/ksystemlog/: index.cache.bz2
src/doc/ksysv/: index.cache.bz2  index.docbook
src/doc/kuser/: index.cache.bz2
src/doc/lilo-config/: index.cache.bz2  index.docbook
src/kcron/doc/: index.cache.bz2
src/kcron/src/: kcmCron.h
src/kcron/src/crontablib/: ctminute.cpp
src/kdat/: Archive.cpp  Archive.h  ArchiveInfoWidget.cpp  ArchiveInfoWidget.h  BackupDlg.cpp  BackupDlg.h  BackupOptDlg.cpp  BackupProfile.cpp  BackupProfile.h  BackupProfileInfoWidget.cpp  BackupProfileInfoWidget.h  BackupProfileManager.cpp  BackupProfileManager.h  BackupProfileWidget.cpp  BackupProfileWidget.h  CMakeLists.txt  ErrorHandler.cpp  File.cpp  File.h  FileInfoWidget.cpp  FileInfoWidget.h  FormatOptDlg.cpp  FormatOptDlg.h  ImageCache.h  IndexDlg.cpp  IndexDlg.h  InfoShellWidget.cpp  InfoShellWidget.h  KDatMainWindow.cpp  LoggerWidget.cpp  LoggerWidget.h  Messages.sh  Node.cpp  Node.h  Options.cpp  OptionsDlg.cpp  OptionsDlgWidget.ui  OptionsDlgWidget.ui.h  Range.cpp  Range.h  (+20 more)
src/kdat/pics/: CMakeLists.txt
src/knetworkconf/: CMakeLists.txt  Doxyfile  LEAME  README
src/knetworkconf/backends/: CMakeLists.txt  NEWS  debug.pl.cmake  file.pl.cmake  general.pl.cmake  guess_system.sh  network-conf.cmake  network.pl.cmake  parse.pl.cmake  platform.pl.cmake  process.pl.cmake  replace.pl.cmake  report.pl.cmake  service-list.pl.cmake  service.pl.cmake  system-tools-backends.pc.cmake  util.pl.cmake  xml.pl.cmake
src/knetworkconf/knetworkconf/: .kdbgrc.knetworkconf  CMakeLists.txt  Messages.sh  kadddevicecontainer.cpp  kadddevicecontainer.h  kadddevicedlg.ui  kadddevicedlgextension.ui  kadddevicewifiext.ui  kadddnsserverdlg.ui  kaddknownhostdlg.ui  kaddressvalidator.cpp  kaddressvalidator.h  kcm_knetworkconfmodule.desktop  kdetectdistrodlg.ui  kdnsinfo.cpp  kdnsinfo.h  kinterfaceupdowndlg.ui  kknownhostinfo.h  knetworkconf.cpp  knetworkconf.desktop  knetworkconf.h  knetworkconfdlg.ui  knetworkconfigparser.cpp  knetworkconfigparser.h  knetworkconfmodule.cpp  knetworkconfmodule.h  knetworkinfo.cpp  knetworkinfo.h  knetworkinterface.cpp  knetworkinterface.h  kreloadnetworkdlg.ui  kroutinginfo.h  kselectdistrodlg.ui  kwirelessinterface.cpp  kwirelessinterface.h  main.cpp
src/knetworkconf/pixmaps/: CMakeLists.txt
src/kpackage/: CMakeLists.txt  Command.ui  Messages.sh  Misc.ui  debInterface.cpp  debInterface.h  findf.cpp  findf.h  kpConfig.cpp  kpConfig.h  kpPty.cpp  kpPty.h  kpSettings.cpp  kpSettings.h  kpTerm.cpp  kpTerm.h  kpackage.cpp  kpackage.desktop  kpackage.h  kpackageSettings.kcfg  kpackageSettings.kcfgc  kpackageui.rc  kpkg.cpp  kpkg.h  kplview.cpp  kplview.h  main.cpp  managementWidget.cpp  managementWidget.h  packageDepends.cpp  packageDepends.h  packageDisplay.cpp  packageDisplay.h  packageInfo.cpp  packageInfo.h  packageProperties.cpp  packageProperties.h  pkgInterface.cpp  pkgInterface.h  pkgOptions.cpp  (+9 more)
src/kpackage/pics/: CMakeLists.txt
src/kpackage/toolbar/: CMakeLists.txt
src/ksystemlog/doc/: index.cache.bz2
src/ksysv/: ActionList.cpp  ActionList.h  CMakeLists.txt  Data.cpp  Data.h  IOCore.cpp  IOCore.h  Messages.sh  OldView.cpp  OldView.h  PreferencesDialog.cpp  PreferencesDialog.h  Properties.cpp  Properties.h  RunlevelAuthIcon.cpp  RunlevelAuthIcon.h  ServiceDlg.cpp  ServiceDlg.h  SpinBox.cpp  SpinBox.h  TopWidget.cpp  TopWidget.h  configwizard.ui  kauthicon.h  kbusymanager.cpp  kdltooltip.cpp  kdltooltip.h  kscroller.cpp  kscroller.h  ksv_conf.cpp  ksv_conf.h  ksv_core.cpp  ksv_core.h  ksv_service.cpp  ksv_service.h  ksvconfigwizard.cpp  ksvconfigwizard.h  ksvdrag.cpp  ksvdrag.h  ksvdraglist.cpp  (+17 more)
src/ksysv/pics/: CMakeLists.txt
src/kuser/doc/: index.cache.bz2
src/lilo-config/: CMakeLists.txt  Messages.sh
src/lilo-config/common/: Config.cc  Config.h  Disks.cc  Disks.h  Files.cc  Files.h  String.cc  String.h  lilo.cc  lilo.h
src/lilo-config/common/tests/: CMakeLists.txt
src/lilo-config/kde/: CMakeLists.txt  Details.cpp  Details.h  InputBox.cpp  InputBox.h  kcontrol.cpp  kcontrol.h  lilo.desktop
src/lilo-config/kde-qt-common/: EditWidget.cpp  EditWidget.h  expert.cpp  expert.h  general.cpp  general.h  images.cpp  images.h  mainwidget.cpp  mainwidget.h  ui.h
src/lilo-config/qt/: CMakeLists.txt  Details.cpp  Details.h  InputBox.cpp  InputBox.h  standalone.cpp  standalone.h
src/system-config-printer-kde/: CMakeLists.txt  COMMENTS  Messages.sh  README  ipp-browse-dialog.ui  new-printer.ui  options.py  optionwidgets.py  smb-browse-dialog.ui  system-config-printer-kde.desktop  system-config-printer-kde.py  system-config-printer.ui
