
install( FILES ark.png debian.png mandriva.png blackpanther.png pld.png redhat.png suse.png turbolinux.png conectiva.png fedora.png openna.png slackware.png freebsd.png gentoo.png vine.png specifix.png kubuntu.png yoper.png  DESTINATION  ${DATA_INSTALL_DIR}/knetworkconf/pixmaps/ )

kde4_install_icons( ${ICON_INSTALL_DIR}   )

